force-app/main/default/objects/Shipment_Container_Detail__c/Shipment_Container_Detail__c.object-meta.xml
<CustomObject>
    <label>Shipment Container Detail</label>
    <nameField>
        <displayFormat>SC -{0000}</displayFormat>
        <label>Shipment Container Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Container Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>