force-app/main/default/objects/Shipment_Container_Detail__c/fields/Commodity_Library_Id__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Library_Id__c</fullName>
    <label>Commodity Library Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>