force-app/main/default/objects/Shipment_Container_Detail__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <label>Order Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>