force-app/main/default/objects/Shipment_Container_Detail__c/fields/Package_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Package_Quantity__c</fullName>
    <label>Package Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>