force-app/main/default/objects/Shipment_Container_Detail__c/fields/Package_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_Type_Id__c</fullName>
    <label>Package Type Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>