force-app/main/default/objects/Shipment_Container_Detail__c/fields/Study_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Study_Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Protocol</label>
    <referenceTo>Study_Protocol__c</referenceTo>
    <relationshipLabel>Shipment Container Details</relationshipLabel>
    <relationshipName>Shipment_Container_Details</relationshipName>
    <type>Lookup</type>
</CustomField>