force-app/main/default/objects/Shipment_Container_Detail__c/fields/Temperature_Id__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Id__c</fullName>
    <label>Temperature Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>