force-app/main/default/objects/Shipment_Container_Detail__c/fields/Type_Of_Goods__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Goods__c</fullName>
    <label>Type Of Goods</label>
    <length>200</length>
    <type>Text</type>
</CustomField>