force-app/main/default/objects/Shipment_Container_Detail__c/fields/Weight_Unit_Of_Measure_Id__c.field-meta.xml
<CustomField>
    <fullName>Weight_Unit_Of_Measure_Id__c</fullName>
    <label>Weight Unit Of Measure Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>